--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -852,6 +852,11 @@ h6 {
   background: #ffecdf;
 }
 
+.dashboard .person-card .card-icon {
+  color: #ff1d74;
+  background: #fcd5e7;
+}
+
 /* Activity */
 .dashboard .activity {
   font-size: 14px;
