--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -1264,3 +1264,15 @@ h6 {
   font-size: 13px;
   color: #012970;
 }
+
+.select2-selection__rendered {
+  line-height: 31px !important;
+}
+
+.select2-container .select2-selection--single {
+  height: 35px !important;
+}
+
+.select2-selection__arrow {
+  height: 34px !important;
+}
